Исправление обработки хешей фильтров и маппинга параметров поиска
- SpellPredicateBuilder: Перевод фильтров классов и подклассов с COLLECTION_ANY QueryDSL путей (.any().url.in) на нативные SQL-подзапросы EXISTS через Expressions.booleanTemplate. Это полностью устраняет фатальную ошибку 'Could not resolve NativeQuery parameter type' при выполнении JPASQLQuery, поскольку нативный запрос не мог замапить объект CharacterClass или обработать Hibernate-джоины напрямую.
- SpellService: Методы resolveClassHashes и resolveSubclassHashes переведены с передачи CharacterClass-объектов обратно на коллекцию строк (URL).
- FilterHashCategoryConverter: Создан глобальный JPA AttributeConverter (@Convert) для перехвата чтений из БД по колонке category. Вызов toUpperCase() лечит 500-ую ошибку 'No enum constant FilterHashCategory.tag'.
- FilterHashMapping: Поле category переведено с генератора @Enumerated на кастомный конвертер FilterHashCategoryConverter.
- CreatureServiceImpl: Добавлен фолбэк для метода resolveHashes для обработки не-хешированных строк.